2009-04-29  Lluis Sanchez Gual  <lluis@novell.com>

	* GnomePlatform.csproj: Don't require a specific gtk# version.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* GnomePlatform.addin.xml: Bump MD version.

2009-02-26  Mike Kestner  <mkestner@novell.com>

	* Gio.cs: remove an unref that can cause double frees, even
	though the docs say the GFileInfo should be unref'd.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* GnomePlatform.csproj: Remove more inadvertent local copying
	  of references.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* GnomePlatform.csproj: Flush.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* GnomePlatform.mdp:
	* GnomePlatform.csproj: Migrated to MSBuild file format.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* GnomePlatform.addin.xml: Bump MD version.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* GnomePlatform.mdp: Flush project format changes.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* GnomePlatform.mdp: All projects now require fx 3.5.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* GnomePlatform.mdp: Fix project file.

	* GnomePlatform.cs: Remove unused code.

2008-12-05  Lluis Sanchez Gual  <lluis@novell.com>

	* GnomePlatform.addin.xml: Hide/protect add-ins.

2008-12-04  Mike Kestner  <mkestner@novell.com>

	* GnomePlatform.cs: still need to initialize gnomevfs for the icon
	lookup.

2008-12-04  Mike Kestner  <mkestner@novell.com>

	* GnomePlatform.cs: add gio hooks.
	* GnomePlatform.dll.config: pinvoke-fu.
	* Gio.cs: gio-based mime lookup code.
	* Makefile.am: new files and config file magic.
	[Fixes #400642]
 
2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Make it work for parallel build.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs:
	* GnomePlatform.mdp: Add AssemblyInfo.cs files that are autogenerated